final portfolio template

--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,17 +1,52 @@
+
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+    color:grey;
+}
+
+div p {
+    font-weight:bold;
+    text-align:right;
+    font-size:14px;
+    margin-top:5px;
+}
+
+div a {
+    text-decoration:none;
+    font-weight:lighter; 
+    font-size: 10px;
+    
+}
+
+div h1 {
+    font-size:30px;
+    font-weight: 500;
+    letter-spacing: 0.2px;
+    word-spacing: 3px;
+    margin-bottom:5px;
+}
+
+div h3 {
+    font-size:24px;
+    margin: 5px 0px 5px 0px;
+    letter-spacing: 2px;
+}
+
+div h2 {
+    margin-bottom: 3px;
+    color: rgb(205,201,201);
 }
 
 .grid {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 650px;
     width: 100%;
 }
-
-
 
 .row {
     width: 100%;
@@ -78,7 +113,31 @@
 
 .bu {
  text-align:center;
+    }
+
+#trennlinie{
+    background-color: grey;
+    height:4px;
+    margin:0px 0px 20px 0px;
 }
 
+#mittleresBild{
+    text-align: center
+}
 
+#rechtesBild{
+    text-align:right;
+    }
+
+.feature{
+    margin-bottom:10px;
+}
+
+.header{
+    margin-bottom:0px;
+}
+
+.mainPic{
+    margin-bottom:0px;
+}
 
